...
    <string name="splash_footer_text">Please do not trust us.\nIt is not necessary</string>

    <string name="Contacts">Contacts</string>
    <string name="item_image">Item image</string>
    <string name="contact_name">Contact name</string>
...
    <string name="upload">Upload</string>
    <string name="Delete">Delete</string>
    <string name="Send">Send</string>
    <string name="folderListingUpdateError">Could not update the folder listing</string>
    <string name="Export">Export</string>
...
    <string name="confirm_delete_title">Delete?</string>
    <string name="confirm_delete_message">Do you want to delete %s?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="aborted">Aborted</string>
...
    <string name="add_folder_header">Create folder</string>
    <string name="add_folder_name">Enter folder name</string>
    <string name="create_folder">Create folder</string>
    <string name="headline_searchresult">Search result:</string>
    <string name="headline_files">File browser</string>
    <string name="filter">Filter</string>
    <string name="no_entrys_found">No files were found</string>
...
    <string name="skip">Skip</string>
    <string name="create_identity_successful">Identity created</string>
    <string name="dialog_headline_info">Information</string>
    <string name="create_identity_enter_all_data">Please fill in all fields</string>
    <string name="finish">Finish</string>
...
    <string name="create_account_final">Your Qabel account is now available.</string>
    <string name="create_identity_final_text">Please note that your identity is only stored to this device. Qabel or third parties do not have copies on their servers.  Please backup your identity as .qid and store it safely. The identity with the ending .qid contains the private key of your identity and should not be disclosed.</string>
    <string name="filebrowser">Files</string>
    <string name="settings_headline_boxaccount">Qabel account</string>
    <string name="headline_settings">Settings</string>
...
    <string name="share_subject">Qabel</string>
    <string name="share_text">Qabel Box</string>
    <string name="share_via">Share via</string>
    <string name="chooser_open_with">Open with</string>
    <string name="add_new_contact">Add new contact</string>
...
    <string name="direct_input">Manual input</string>

    <string name="contact_import_failed">Contact import failed</string>
    <string name="contact_import_manual_failed">Contact import failed. Please check if you entered the correct data</string>

...
    <string name="share_into_app_select_identity">Please select the identity you want to use for the upload</string>
    <string name="share_into_app_canceled">The upload  was canceled</string>
    <string name="share_to_contact_message">Please select a contact with which you want to share this file</string>
    <string name="share_into_app_select_folder">Please select folder in which you want to upload the files</string>
    <string name="headline_share_select_upload_identity">Select upload identity</string>
...
    <string name="send_message_as">Send message as %s</string>

    <string name="ShareToQabelUser">Share</string>
    <string name="fileshare_label_in_chatmessage">Shared file %1</string>
    <string name="headline_share_to_qabeluser">Share to QabelUser</string>
    <string name="accept_share">Accept share</string>
    <string name="cant_share_contactlist_is_empty">Can\'t share file. You have no contact in contactlist</string>
    <string name="share_only_files_possibility">Only files can be shared</string>
    <string name="dialog_share_sending_in_progress">File is uploading for sharing</string>
    <string name="messsage_file_shared">File successfully shared</string>
    <string name="cant_import_shared_file">Can\'t import shared file</string>
    <string name="shared_file_imported">Shared file imported</string>
...
    <string name="share_error_on_sending">Share not sent</string>
    <string name="filebrowser_file_is_shared_to">Shared to</string>
    <string name="filebrowser_file_is_shared_from">Shared from %1</string>
    <string name="Unshare">Revoke share</string>
    <string name="message_cant_attach_external_file_exists">Can\'t attach shared file. A file with this name exists already. Maybe you have attached the file times before</string>
...
    <string name="action_tellafriend">Invitation</string>

    <string name="cant_import_file_type_is_unknown">Can\'t import file. The file type is unknown</string>
    <string name="idenity_imported">Identity successfully imported</string>
    <string name="shared_with_you">shared with you</string>
    <string name="no_connection">No Connection</string>
    <string name="close_app">Close App</string>
...
