...
        style="@style/MessageText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_to_contact_message"/>

    <Spinner
        android:id="@+id/spinner_identities"
        style="@style/Spinner"
        android:paddingTop="10dp"
        android:paddingLeft="0dp"
        android:layout_marginLeft="0dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
...
