...

        <ImageView android:layout_width="96dp" android:layout_height="96dp"
                   android:src="@drawable/qabel_logo" android:id="@+id/qabelLogo" />

        <de.qabel.qabelbox.views.TextViewFont android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:id="@+id/textViewSelectedIdentity"
                  android:layout_alignTop="@+id/imageViewExpandIdentity"
                  android:layout_alignBottom="@+id/imageViewExpandIdentity"
                  android:layout_toStartOf="@+id/imageViewExpandIdentity"
                  android:textSize="22dp"
            />

        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content"
...
